# final_project

./: .gitignore  README.md  csv_sink_output.csv  demo.py  output.jsonl  pyproject.toml  review.md  scratch.py  test.csv  test_json.jsonl  test_output.jsonl
src/pipeline/: cli.py  pipeline.py  sinks.py  sources.py
tests/: test_pipeline.py  test_sinks.py  test_sources.py
