[project]
name = "pipeline"
version = "0.1.0"
description = "Async data pipeline"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[project.scripts]
pipeline = "pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
